# Evaluation_MCPGen

./: .gitignore  README.md  config.yaml.example  pyproject.toml  run.sh  workflow_diagnosis.json
core/: config.py
result/20251129_051700/: config_backup.json  total_summary.json
result/20251129_051700/mcp_project01/: dataset_summary.json
result/20251129_051700/mcp_project01/mcp_project01/: collective_test_stderr.txt  workflow_result.json
result/20251129_051700/mcp_project01/mcp_project01/evaluations/: extract_order_info_tool_individual_stderr.txt  extract_order_info_tool_metrics.json  generate_order_summary_tool_individual_stderr.txt  generate_order_summary_tool_metrics.json  generate_success_response_tool_individual_stderr.txt  generate_success_response_tool_metrics.json  log_order_to_sheets_tool_individual_stderr.txt  log_order_to_sheets_tool_metrics.json  process_confirmation_tool_individual_stderr.txt  process_confirmation_tool_metrics.json  validate_format_order_tool_individual_stderr.txt  validate_format_order_tool_metrics.json
result/20251129_051700/mcp_project01/mcp_project01/generated_tools/: extract_order_info_tool.py  generate_success_response_tool.py  (+1 more)
tasks/: comprehensive_metrics.py  improved_prompts.py  isolated_test_env.py  mcp_tool_evaluator.py  mcp_tool_regenerator.py  workflow_shuffling.py  workflow_shuffling_mcp.py
test/: test_llm_connection.py  test_mcp_tool_evaluation.py  test_optimized_storage.py
utils/: error_propagation.py  evaluate_tools.py  llm_interface.py  logger.py  mcp_extractor.py  report_generator.py  workflow_helpers.py
(+33 files in other folders)
