[project]
name = "mcpflow-evaluation"
version = "0.1.0"
description = "MCPFlow Tools Generation Evaluation Framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.4",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "networkx>=3.5",
    "openai>=2.3.0",
    "pyyaml>=6.0.3",
]
